payara-micro: 5.2022.4 -> 6.2022.1